--- a/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
+++ b/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
@@ -42,14 +42,14 @@
           <mat-form-field appearance="outline" floatLabel="always" [style.width]="'350px'">
             <mat-label>Description</mat-label>
             <textarea matInput [maxLength]="maxLength" formControlName="description"  [rows]="3" [cols]="60" id="description" name="description" [placeholder]="'[Optional description]'"></textarea>
-            <mat-hint align="end">{{numberOfLetters}}/ {{maxLength}}</mat-hint>
+            <mat-hint [ngClass]="{'orange' : maxLength - numberOfLetters <= 100 && numberOfLetters < maxLength, 'red' : maxLength === numberOfLetters}" align="end">{{numberOfLetters}}/ {{maxLength}}</mat-hint>
             @if (playlist.get('description')?.hasError('maxlength')) {
               <mat-error>
                 Max length is 300 characters
               </mat-error>
             }
           </mat-form-field>
-<!--          <p><span [ngClass]="{'orange' : maxLength - numberOfLetters <= 100 && numberOfLetters < maxLength, 'red' : maxLength === numberOfLetters}">{{numberOfLetters}}</span>/{{maxLength}}</p>-->
+<!--          <p><span >{{numberOfLetters}}</span>/{{maxLength}}</p>-->
 
         </div>
 
@@ -64,5 +64,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close class="white cancel">Cancel</button>
-  <button mat-button cdkFocusInitial  (click)="!isEdit ? confirm() : update()" class="white create">{{!isEdit ? 'Confirm' : 'Update'}}</button>
+  <button mat-button cdkFocusInitial [disabled]="!playlist.valid"  (click)="!isEdit ? confirm() : update()" class="white create">{{!isEdit ? 'Confirm' : 'Update'}}</button>
 </div>
