album-detail bug fix

--- a/src/app/albums/album-detail/album-detail.component.html
+++ b/src/app/albums/album-detail/album-detail.component.html
@@ -1,4 +1,4 @@
-@if(shouldShowHeader) {
+@if(shouldShowHeader && album) {
   <div class="slide" [@slideInOut]="'in'">
     <app-small-header [tracks]="album.tracks"
                       [title]="album.name"
