--- a/src/app/queue/queue.component.scss
+++ b/src/app/queue/queue.component.scss
@@ -12,6 +12,20 @@
   align-items: center;
   justify-content: center;
   background: var(--queue);
+background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
   .background{
     transition: background .3s ease-in-out;
     width: 100%;
