--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,6 +174,12 @@ mat-dialog-container{
       span{
         color: var(--primary-black);
       }
+      &:disabled {
+        background: var(--gray);
+        span{
+          color: var(--light-text);
+        }
+      }
     }
   }
 
@@ -203,11 +209,12 @@ mat-dialog-container{
   --primary-text: #fff;
   --light-text: #9b9b9b;
   --light-gray: #a9a9a9;
-  --queue: linear-gradient(#181818, #000);
+  --queue: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   --playlist: linear-gradient(#212121, #000);
   --player: #090909;
   --gradient-45: linear-gradient(135deg, var(--liked) , #b6b6b6);
   --liked: #501970;
+  --queue-opacity: #000;
   /*--main-color: #fa1a1a;
   --sidenav-width: 250px;
   --header-height: 65px;
@@ -970,4 +977,7 @@ form{
   span{
     color: var(--light) !important;
   }
+}
+.mat-mdc-form-field-hint-end {
+  color: var(--primary-text);
 }
